--- a/readme/templates/readme/login.html
+++ b/readme/templates/readme/login.html
@@ -9,21 +9,32 @@
 
 {% block content %}
 <div class="w-full h-screen flex justify-center items-center relative">
-    <img src="{% static 'img/auth-bg.jpg' %}" alt="Login Background"
+    <img src="{% static 'readme/img/auth-bg.jpg' %}" alt="Login Background"
         class="w-full h-full absolute top-0 left-0 object-cover">
     <div class="absolute top-0 left-0 w-full h-full bg-black/40"></div>
     <form method="POST" class="w-full flex justify-center">
         {% csrf_token %}
         <div class="relative bg-white flex flex-col gap-6 rounded-2xl px-6 py-10 w-full max-w-md">
             <h1 class="font-Merriweather font-medium text-5xl text-center">Masuk</h1>
+
+            {% if error %}
+            <div class="bg-red-200 rounded-md flex gap-4 p-2">
+                <img src="{% static 'readme/img/error.svg' %}" alt="Error">
+                <span>{{ error }}</span>
+            </div>
+            {% endif %}
+
             <div class="flex flex-col gap-2">
                 <label class="flex flex-col gap-1" for="username">
                     <span>Username/Email</span>
-                    <input type="text" name="username" id="username" placeholder="Username atau email anda">
+                    <input type="text" name="username" id="username" placeholder="Username atau email anda"
+                        value="{{ form.username.value|default_if_none:'' }}">
+                    <span class="text-red-500">{{ form.errors.username }}</span>
                 </label>
-                <label class="flex flex-col gap-1">
+                <label class=" flex flex-col gap-1">
                     <span>Password</span>
                     <input type="password" name="password" placeholder="Password">
+                    <span class="text-red-500">{{ form.errors.password }}</span>
                 </label>
             </div>
             <div class="flex flex-col items-center gap-4">
