test push branch feat/quotes

--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <div class="w-full h-screen text-5xl font-bold  flex justify-center items-center">
-    Delete this!
+    This is quotes page!
 </div>
 {% endblock content %}
