--- a/readme/templates/readme/index.html
+++ b/readme/templates/readme/index.html
@@ -1,9 +1,122 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load humanize %}
 
 
 {% block content %}
-<div class="w-full h-screen text-5xl font-bold  flex justify-center items-center">
-    Hello {{ user.username }}! This is Homepage! Still in progress!
+<div class="container flex py-6 px-12 gap-6">
+    <div class="w-3/4 flex flex-col gap-3">
+        <div class="flex w-full bg-white p-4 border gap-4 items-center">
+            <img src="{% static 'img/profile.svg' %}" alt="">
+            <input type="text" class="w-full border-none bg-black/5"
+                placeholder="Apa yang ingin anda ceritakan hari ini?">
+            <a href="{% url 'post' %}" class="text-white bg-[#00635D] rounded-full h-fit py-1.5 px-4">Bagikan</a>
+        </div>
+        {% if posts %}
+
+        {% for post in posts %}
+        <div class="flex bg-white w-full justify-between px-4 py-4 gap-16 border ">
+            <div class="flex flex-col gap-3">
+                <div class="flex gap-3 items-center">
+                    <img src="{% static 'img/profile.svg' %}" alt="">
+                    <div class="flex flex-col">
+                        <div class="flex gap-1">
+                            <span>{{post.user.name}}</span>
+                            <span>@{{post.user.username}}</span>
+                        </div>
+                        <span class="text-sm">{{post.user.biodata}}</span>
+                    </div>
+                </div>
+                <div class="flex flex-col justify-between h-full">
+                    <span>{{post.content}} <a href="#" class="text-[#00635D] underline">Tampilkan lebih
+                            banyak</a></span>
+
+                    {% if post.created_at == post.updated_at %}
+                    <span>{{ post.created_at|date:"g:i A · j M Y" }}</span>
+                    {% else %}
+                    <span>Terakhir diedit {{ post.updated_at|date:"g:i A · j M Y" }}</span>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="flex flex-col items-center w-min gap-1">
+                <div class="w-40 ">
+                    <img src="{{ post.book.image_url }}" alt="Gambar buku" class="border mx-auto">
+                </div>
+                <span class="text-center text-xs text-black/70">{{ post.book.title }}
+                    ({{post.book.publication_date.year}})</span>
+            </div>
+        </div>
+        {% endfor %}
+
+        {% else %}
+        <span>Belum ada postingan apapun :(</span>
+        {% endif %}
+
+    </div>
+    <aside class="w-1/4 flex flex-col gap-5">
+        <div class="flex flex-col gap-1">
+            <h2 class="font-semibold">BUKU TERBARU</h2>
+            <span>Temukan banyak buku menarik <a href="#" class="text-[#00635D] underline">disini</a></span>
+            <div class="flex gap-2">
+                <div class="w-1/3">
+                    <a href="#" class=" w-1/3">
+                        <img src="http://books.google.com/books/content?id=rSCwAAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
+                            alt="cover" class="border">
+                    </a>
+                </div>
+                <div class="w-1/3">
+                    <a href="#" class=" w-1/3">
+                        <img src="http://books.google.com/books/content?id=rSCwAAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
+                            alt="cover" class="border">
+                    </a>
+                </div>
+                <div class="w-1/3">
+                    <a href="#" class=" w-1/3">
+                        <img src="http://books.google.com/books/content?id=rSCwAAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
+                            alt="cover" class="border">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <hr class="border-2">
+        <div class="flex flex-col gap-3">
+            <h2 class="font-semibold">CARI BUKU BERDASARKAN TAG</h2>
+            <div class="flex flex-wrap gap-2">
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Kesehatan</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Novel</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Horror</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Misteri</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Komedi</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Drama</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Pendidikan</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Dewasa</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Manga</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Teknologi</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Fiksi</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Non-fiksi</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Fantasi</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Sains</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Sejarah</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Biografi</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Puisi</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Sastra</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Thriller</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Bisnis</a>
+                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Romantis</a>
+            </div>
+        </div>
+        <hr class="border-2">
+        <div class="flex flex-col gap-3">
+            <h2 class="font-semibold">QUOTES TERATAS</h2>
+            <div>
+                <div
+                    class="text-[#5A410095] bg-white w-full h-40 flex flex-col justify-center items-center gap-1 border rounded-2xl font-Merriweather">
+                    <span>"This is the best quote ever"</span>
+                    <span class="text-xs italic">-Udil Santoso</span>
+                </div>
+            </div>
+        </div>
+    </aside>
 </div>
 
 {% endblock content %}
