--- a/readme/templates/readme/index.html
+++ b/readme/templates/readme/index.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col justify-between h-full">
-                    <span>{{post.content}} <a href="#" class="text-[#00635D] underline">Tampilkan lebih
+                    <span>{{post.content}} <a href="{% url 'post' %}" class="text-[#00635D] underline">Tampilkan lebih
                             banyak</a></span>
 
                     {% if post.created_at == post.updated_at %}
@@ -38,13 +38,13 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="flex flex-col items-center w-min gap-1">
+            <a href="{% url 'books' %}" class="flex flex-col items-center w-min gap-1">
                 <div class="w-40 ">
                     <img src="{{ post.book.image_url }}" alt="Gambar buku" class="border mx-auto">
                 </div>
                 <span class="text-center text-xs text-black/70">{{ post.book.title }}
                     ({{post.book.publication_date.year}})</span>
-            </div>
+            </a>
         </div>
         {% endfor %}
 
@@ -56,53 +56,27 @@
     <aside class="w-1/4 flex flex-col gap-5">
         <div class="flex flex-col gap-1">
             <h2 class="font-semibold">BUKU TERBARU</h2>
-            <span>Temukan banyak buku menarik <a href="#" class="text-[#00635D] underline">disini</a></span>
+            <span>Temukan banyak buku menarik <a href="{% url 'books' %}"
+                    class="text-[#00635D] underline">disini</a></span>
             <div class="flex gap-2">
+
+                {% for book in books %}
                 <div class="w-1/3">
-                    <a href="#" class=" w-1/3">
-                        <img src="http://books.google.com/books/content?id=rSCwAAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
-                            alt="cover" class="border">
+                    <a href="{% url 'books' %}" class=" w-1/3">
+                        <img src="{{ book.image_url }}" alt="cover" class="border">
                     </a>
                 </div>
-                <div class="w-1/3">
-                    <a href="#" class=" w-1/3">
-                        <img src="http://books.google.com/books/content?id=rSCwAAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
-                            alt="cover" class="border">
-                    </a>
-                </div>
-                <div class="w-1/3">
-                    <a href="#" class=" w-1/3">
-                        <img src="http://books.google.com/books/content?id=rSCwAAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api"
-                            alt="cover" class="border">
-                    </a>
-                </div>
+                {% endfor %}
             </div>
         </div>
         <hr class="border-2">
         <div class="flex flex-col gap-3">
             <h2 class="font-semibold">CARI BUKU BERDASARKAN TAG</h2>
             <div class="flex flex-wrap gap-2">
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Kesehatan</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Novel</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Horror</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Misteri</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Komedi</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Drama</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Pendidikan</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Dewasa</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Manga</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Teknologi</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Fiksi</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Non-fiksi</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Fantasi</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Sains</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Sejarah</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Biografi</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Puisi</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Sastra</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Thriller</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Bisnis</a>
-                <a href="#" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">Romantis</a>
+
+                {% for category in categories %}
+                <a href="{% url 'books' %}" class="bg-[#E7E7E7] rounded-full text-sm py-0.5 px-3.5">{{ category }}</a>
+                {% endfor %}
             </div>
         </div>
         <hr class="border-2">
@@ -110,9 +84,9 @@
             <h2 class="font-semibold">QUOTES TERATAS</h2>
             <div>
                 <div
-                    class="text-[#5A410095] bg-white w-full h-40 flex flex-col justify-center items-center gap-1 border rounded-2xl font-Merriweather">
-                    <span>"This is the best quote ever"</span>
-                    <span class="text-xs italic">-Udil Santoso</span>
+                    class="text-[#5A410095] text-center px-2 bg-white w-full h-40 flex flex-col justify-center items-center gap-1 border rounded-2xl font-Merriweather">
+                    <span>"{{ quote.quote }}"</span>
+                    <span class="text-xs italic">-{{ quote.user.name }}</span>
                 </div>
             </div>
         </div>
