fix type, post url, fix user models

--- a/readme/templates/readme/profile.html
+++ b/readme/templates/readme/profile.html
@@ -11,9 +11,9 @@
                 </div>
                 <div class="flex flex-col gap-2 text-sm">
                     <a href="{% url 'wishlist' %}"
-                        class="bg-[#00635D] text-white py-2 px-2 rounded-sm text-center">Lihat
+                        class="bg-[#00635D] text-white py-2 px-2 rounded-full text-center">Lihat
                         Wishlist</a>
-                    <a href="{% url 'shop' %}" class="bg-[#003f63] text-white py-2 px-2 rounded-sm text-center">Lihst
+                    <a href="{% url 'shop' %}" class="bg-[#003f63] text-white py-2 px-2 rounded-full text-center">Lihat
                         Buku yang Dibeli</a>
                 </div>
             </div>
