--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,9 +1,66 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
-<div class="w-full h-screen text-5xl font-bold  flex justify-center items-center">
-    Delete this!
+<div class="container flex flex-col py-6 px-4 sm:px-12 justify-center">
+    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 xl:grid-cols-7 2xl:grid-cols-8 gap-6 justify-items-center">
+        {% for shop_item in shop_items %}
+        <div class="bg-white border p-2 rounded-md w-36 shadow-md">
+            <div class="flex flex-col h-4/5">
+                <img src="{{shop_item.book.image_url}}" alt="book cover" class="h-48">
+                <p class="text-xs mt-2 font-semibold text-center">{{ shop_item.book.title }} ({{ shop_item.book.publication_date.year }})</p>
+            </div>
+            <div class="flex flex-col justify-end items-center h-1/5">
+                <div class="flex justify-center w-full mt-2">
+                    <div class="flex justify-center items-center w-3/5 bg-[#5A4100] text-white text-xs rounded mr-1">
+                        {{ shop_item.amount }} Available
+                    </div>
+                    <div class="flex justify-center items-center w-2/5 text-xs font-bold rounded">
+                        <div class="mr-1">
+                            <img class="h-4 w-4" src="{% static '/img/loyalty-point.svg' %}" alt="loyalty point">
+                        </div>
+                        {{ shop_item.price }}
+                    </div>
+                </div>
+                <div class="flex justify-center w-full mt-2">
+                    <button class="bg-[#fbbd61] hover:bg-[#af8445] text-white text-center rounded-md w-full py-1" onclick="addToCart('{{shop_item.pk}}')">Add To Cart</button>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </div>
+
+{% if user.is_authenticated %}
+<a class="fixed bottom-0 right-0 mr-12 mb-12 bg-[#fbbd61] hover:bg-[#af8445] rounded-full py-2 px-4 shadow-xl drop-shadow-xl" href="{% url 'cart' %}">
+    <svg class="h-10 w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
+        <path d="M3 3H3.26835C3.74213 3 3.97943 3 4.17267 3.08548C4.34304 3.16084 4.48871 3.28218 4.59375 3.43604C4.71269 3.61026 4.75564 3.8429 4.84137 4.30727L7.00004 16L17.4218 16C17.875 16 18.1023 16 18.29 15.9199C18.4559 15.8492 18.5989 15.7346 18.7051 15.5889C18.8252 15.4242 18.8761 15.2037 18.9777 14.7631L18.9785 14.76L20.5477 7.95996L20.5481 7.95854C20.7023 7.29016 20.7796 6.95515 20.6947 6.69238C20.6202 6.46182 20.4635 6.26634 20.2556 6.14192C20.0184 6 19.6758 6 18.9887 6H5.5M18 21C17.4477 21 17 20.5523 17 20C17 19.4477 17.4477 19 18 19C18.5523 19 19 19.4477 19 20C19 20.5523 18.5523 21 18 21ZM8 21C7.44772 21 7 20.5523 7 20C7 19.4477 7.44772 19 8 19C8.55228 19 9 19.4477 9 20C9 20.5523 8.55228 21 8 21Z" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+</a>
+{% endif %}
+
+<div class="fixed top-20 flex justify-center w-full" id="message"></div>
+
+<script>
+    function addToCart(item_id) {
+        fetch(`add-to-cart/${item_id}/`, {method: "POST"}).then(response => {
+            message = document.getElementById("message");
+            message.innerHTML = `<div class="flex ${response.ok ? "bg-green-100 border-green-500 text-green-500" : "bg-red-100 border-red-500 text-red-500"} rounded-full border-2">
+                <div class="w-16">
+                    <div class="p-4">
+                        ${response.ok ? '<svg class="h-8 w-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M468.907 214.604c-11.423 0-20.682 9.26-20.682 20.682v20.831c-.031 54.338-21.221 105.412-59.666 143.812-38.417 38.372-89.467 59.5-143.761 59.5h-.12C132.506 459.365 41.3 368.056 41.364 255.883c.031-54.337 21.221-105.411 59.667-143.813 38.417-38.372 89.468-59.5 143.761-59.5h.12c28.672.016 56.49 5.942 82.68 17.611 10.436 4.65 22.659-.041 27.309-10.474 4.648-10.433-.04-22.659-10.474-27.309-31.516-14.043-64.989-21.173-99.492-21.192h-.144c-65.329 0-126.767 25.428-172.993 71.6C25.536 129.014.038 190.473 0 255.861c-.037 65.386 25.389 126.874 71.599 173.136 46.21 46.262 107.668 71.76 173.055 71.798h.144c65.329 0 126.767-25.427 172.993-71.6 46.262-46.209 71.76-107.668 71.798-173.066v-20.842c0-11.423-9.259-20.683-20.682-20.683z"></path><path d="M505.942 39.803c-8.077-8.076-21.172-8.076-29.249 0L244.794 271.701l-52.609-52.609c-8.076-8.077-21.172-8.077-29.248 0-8.077 8.077-8.077 21.172 0 29.249l67.234 67.234a20.616 20.616 0 0 0 14.625 6.058 20.618 20.618 0 0 0 14.625-6.058L505.942 69.052c8.077-8.077 8.077-21.172 0-29.249z"></path></svg>'
+                        : '<svg class="h-8 w-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M437.019 74.981C388.667 26.629 324.38 0 256 0S123.333 26.63 74.981 74.981 0 187.62 0 256s26.629 132.667 74.981 181.019C123.332 485.371 187.62 512 256 512s132.667-26.629 181.019-74.981C485.371 388.667 512 324.38 512 256s-26.629-132.668-74.981-181.019zM256 470.636C137.65 470.636 41.364 374.35 41.364 256S137.65 41.364 256 41.364 470.636 137.65 470.636 256 374.35 470.636 256 470.636z"></path><path d="M341.22 170.781c-8.077-8.077-21.172-8.077-29.249 0L170.78 311.971c-8.077 8.077-8.077 21.172 0 29.249 4.038 4.039 9.332 6.058 14.625 6.058s10.587-2.019 14.625-6.058l141.19-141.191c8.076-8.076 8.076-21.171 0-29.248z"></path><path d="M341.22 311.971l-141.191-141.19c-8.076-8.077-21.172-8.077-29.248 0-8.077 8.076-8.077 21.171 0 29.248l141.19 141.191a20.616 20.616 0 0 0 14.625 6.058 20.618 20.618 0 0 0 14.625-6.058c8.075-8.077 8.075-21.172-.001-29.249z"></path></svg>'}
+                    </div>
+                </div>
+                <div class="w-auto items-center py-4 pr-4">
+                    <span class="text-lg font-bold">
+                        ${response.ok ? "Book added to cart successfully!" : "Can't add book to cart! Login first!"}
+                    </span>
+                </div>
+            </div>`
+            setTimeout(() => {message.innerHTML = ""}, 3000);
+        })
+    }
+</script>
 
 {% endblock content %}
