--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -2,6 +2,27 @@
 {% load static %}
 
 {% block content %}
+
+<div class="bg-gray-300 py-20 relative flex w-full flex-col gap-10">
+    <img src="{% static 'books/img/books.jpg' %}"
+        class="object-cover absolute top-0 left-0 w-full h-full brightness-50" alt="">
+    <h1 class="relative font-bold text-5xl text-white text-center">Buy some books with your loyalty points!</h1>
+    <form method="GET">
+        <div class="flex relative gap-0.5 w-full max-w-screen-lg mx-auto">
+            <input placeholder="Title" name="q" type="text" class="w-full px-6 !rounded-r-none"
+                value="{{ request.GET.q }}">
+            <select name="pricerange">
+                <option value="">All price</option>
+                <option value="0-399" {% if request.GET.pricerange == "0-399" %}selected{% endif %}>0-399</option>
+                <option value="400-699" {% if request.GET.pricerange == "400-699" %}selected{% endif %}>400-699</option>
+                <option value="700-999" {% if request.GET.pricerange == "700-999" %}selected{% endif %}>700-999</option>
+                <option value="1000-10000000" {% if request.GET.pricerange == "1000-10000000" %}selected{% endif %}>1000+</option>
+            </select>
+            <button type="submit" value="Search" class="bg-yellow-800 text-white font-bold  rounded-r-full px-6">Search</button>
+        </div>
+    </form>
+</div>
+
 <div class="container flex flex-col py-6 px-4 sm:px-12 justify-center">
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 xl:grid-cols-7 2xl:grid-cols-8 gap-6 justify-items-center">
         {% for shop_item in shop_items %}
