update fitur cited and loyalty

--- a/quotes/templates/quotes/cited_quote.html
+++ b/quotes/templates/quotes/cited_quote.html
@@ -12,7 +12,7 @@
 
     <p>User Count Cited: {{ cited_count }}</p>
 
-    {% if user_has_cited %}
+    {% if user_cited %}
         <p>You have requote this quote</p>
     {% else %}
         {% if cited_count < 3 %}
