--- a/quotes/templates/quotes/edit_quotes.html
+++ b/quotes/templates/quotes/edit_quotes.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="max-w-xl mx-auto mt-3">
+<div class="max-w-xl mx-auto mt-5">
     <div class="bg-orange-200 rounded-lg shadow-lg p-6">
         <h5 class="text-2xl font-semibold mb-4 text-center">Edit Quote</h5>
 
@@ -13,7 +13,7 @@
                     <td></td>
                     <td class="flex justify-center items-center text-center">
                         <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                            Tambahkan Quotes
+                            Update Quotes
                         </button>
                     </td>
                 </tr>
