fix edit and delete button

--- a/quotes/templates/quotes/edit_quotes.html
+++ b/quotes/templates/quotes/edit_quotes.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="max-w-xl mx-auto mt-5">
+<!-- <div class="max-w-xl mx-auto mt-5"> -->
+<div class="md:w-1/2 lg:w-1/4 mx-auto mb-4">
     <div class="bg-orange-200 rounded-lg shadow-lg p-6">
         <h5 class="text-2xl font-semibold mb-4 text-center">Edit Quote</h5>
 
