--- a/quotes/templates/quotes/create_quotes.html
+++ b/quotes/templates/quotes/create_quotes.html
@@ -3,7 +3,8 @@
 {% block content %}
 <div class="max-w-xl mx-auto mt-3">
     <div class="bg-orange-200 rounded-lg shadow-lg p-6">
-        <h5 class="text-2xl font-semibold mb-4 text-center">Tambahkan Quotes ke Dalam Daftar Kamu!</h5>
+        <h5 class="text-2xl font-bold mb-4 text-center">Tambahkan Quotes ke Dalam Daftar Kamu!</h5>
+        <p class="text-center font-semibold text-red-500">PILIH USER SESUAI DENGAN NAMA USERNAMEMU!!!</p>
 
         <form method="POST">
             {% csrf_token %}
