--- a/quotes/templates/quotes/edit_quotes.html
+++ b/quotes/templates/quotes/edit_quotes.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<!-- <div class="max-w-xl mx-auto mt-5"> -->
-<div class="md:w-1/2 lg:w-1/4 mx-auto mb-4">
+<div class="max-w-xl mx-auto mt-3">
     <div class="bg-orange-200 rounded-lg shadow-lg p-6">
-        <h5 class="text-2xl font-semibold mb-4 text-center">Edit Quote</h5>
+        <h5 class="text-2xl font-bold mb-4 text-center">Edit Quote</h5>
+        <p class="text-center font-semibold text-red-500">PILIH USER SESUAI DENGAN NAMA USERNAMEMU!!!</p>
 
         <form method="POST">
             {% csrf_token %}
